--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "top",
-  "version": "0.2.2",
+  "version": "0.2.3",
   "description": "Taobao Open API Client.",
   "keywords": ["top", "taobao", "open api", "top client"],
   "author": "fengmk2 <fengmk2@gmail.com> (http://fengmk2.github.com/)",
@@ -18,7 +18,7 @@
   "dependencies": {
     "urllib": ">=0.5.2",
     "utility": ">=0.1.2",
-    "agentkeepalive": ">=0.1.5"
+    "agentkeepalive": "0.1.5"
   },
   "devDependencies": {
     "mm": "*",
